# cs2_patch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
launcher/: CMakeLists.txt  launcher.rc  plat_win.cpp  platform.h  steam_proxy.cpp
protos/: base_gcmessages_csgo.pb.cc  base_gcmessages_csgo.pb.h  base_gcmessages_csgo.proto  c_peer2peer_netmessages.proto  clientmessages.pb.cc  clientmessages.pb.h  clientmessages.proto  cs_gameevents.pb.cc  cs_gameevents.pb.h  cs_gameevents.proto  cs_usercmd.pb.cc  cs_usercmd.pb.h  cs_usercmd.proto  cstrike15_gcmessages.pb.cc  cstrike15_gcmessages.pb.h  cstrike15_gcmessages.proto  cstrike15_usermessages.pb.cc  cstrike15_usermessages.pb.h  cstrike15_usermessages.proto  demo.pb.cc  demo.pb.h  demo.proto  econ_gcmessages.pb.cc  econ_gcmessages.pb.h  econ_gcmessages.proto  engine_gcmessages.proto  fatdemo.pb.cc  fatdemo.pb.h  fatdemo.proto  gameevents.pb.cc  gameevents.pb.h  gameevents.proto  gcsdk_gcmessages.pb.cc  gcsdk_gcmessages.pb.h  gcsdk_gcmessages.proto  gcsystemmsgs.proto  netmessages.pb.cc  netmessages.pb.h  netmessages.proto  network_connection.pb.cc  (+35 more)
proxy/: CMakeLists.txt  gc_dump.cpp  gc_dump.h  launcher_win.cpp  plat_win.cpp  platform.h  precompiled.h  steam_proxy.cpp
